--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Pagina principal</title>
         <link rel="stylesheet" href="OI/estilo2.css"/> 
     </head>
     <body>
-        <a href="exemplo1.html">Exemplo-01</a><br>
-        <a href="exemplo2.html">Exemplo-02</a>
+        <h1>Meus Repositorios</h1>
+        <h3>Henrique Queiroz de Paula</h3>
+        <ul>
+            <li><a href="exemplo1.html">Exemplo-01</a><br></li>
+            <li><a href="exemplo2.html">Exemplo-02</a><br></li>
+            <li><a href="https://cackiito.github.io/Pois-Sim/">Revista-Português</a></li>
+        </ul>
     </body>
-</html>
+</html>>
