--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
             <li><a href="https://cackiito.github.io/Pois-Sim/">Revista-Português</a></li>
         </ul>
     </body>
-</html>>
+</html>
