--- a/exemplo1.html
+++ b/exemplo1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF=8">
         <title>Exemplo usando css</title>
-         <link rel="stylesheet" href="OI/estilo2.css"/> 
+         <link rel="stylesheet" href="oi/estilo2.css"/> 
       <h1>Exemplo de configurações para a imagem com CSS</h1>
     </head>
     <body>
