--- a/exemplo2.html
+++ b/exemplo2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF=8"/>
         <title>Exemplo 2</title>
-        <link rel="stylesheet" href="OI/estilo2.css"/> 
+        <link rel="stylesheet" href="oi/estilo2.css"/> 
     </head>
     <body>
         <h1>Configurações para CSS-texto.</h1>
