--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pagina principal</title>
-        <link rel="stylesheet" href="OI/estilo2.css"/> 
+        <link rel="stylesheet" href="oi/estilo2.css"/> 
     </head>
     <body>
         <h1>Meus Repositorios</h1>
